# crumb

./: README.md  crumb.py  pyproject.toml
.github/workflows/: ci.yml
core/: __init__.py  __main__.py  cli.py  commands.py  storage.py  ui.py
tests/: test_crumb.py
