[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "crumb-cli"
version = "0.1.0"
description = "CLI memory aid for commands, snippets, and notes"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["cli", "productivity", "snippets", "terminal"]

[project.scripts]
crumb = "crumb:main"

[project.optional-dependencies]
dev = ["ruff", "pytest"]

[project.urls]
Homepage = "https://github.com/toov00/crumb"
Repository = "https://github.com/toov00/crumb"
Issues = "https://github.com/toov00/crumb/issues"

[tool.ruff]
target-version = "py310"
line-length = 100
